--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node index.js",
     "build": "cd client && npm run build",
-    "heroku-postbuild" : "npm run install-client && npm install -g @angular/cli && npm run build",
+    "heroku-postbuild": "npm run install-client && npm install -g @angular/cli && npm run build",
     "install-client": "cd client && npm install"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "mongoose": "^6.3.0",
     "morgan": "~1.9.1",
