--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "version": 2,
     "builds": [
      {
-      "src": "app.js",
+      "src": "index.js",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["Client/**"] }
+      "config": { "includeFiles": ["**"] }
      }
     ],
     "routes": [
      {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "index.js"
      }
     ]
    }
